test/libsolidity/syntaxTests/parsing/wrong_compiler_4.sol
pragma solidity ^99.99.0;
contract C {
    function f() {}
}
// ----
// ParserError 5333: (0-25): Source file requires different compiler version (current compiler is ....
